--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 			"extensions": [
 				"ms-python.python",
 				"editorconfig.editorconfig",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"ms-python.black-formatter"
 			]
 		}
 	},
